refactor : Introduce service architecture and HAL

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -18,7 +18,10 @@ test_ignore = test/*
 
 [env:native]
 platform = native
-test_framework = googletest
-build_flags = -I src
-lib_deps =
+framework =
+build_flags = -std=c++17 -Wall -Wextra -g
+lib_deps = 
     googletest
+    fabiobatsilva/ArduinoFake
+lib_archive = no
+test_build_src = true
