feat(ui) : Integrate LVGL graphics library

--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,15 +13,23 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
+build_flags = -DLV_CONF_PATH="${PROJECT_DIR}/lv_conf.h" -std=c++14
 lib_deps =
+    lvgl/lvgl@^8.3.11
+    bblanchon/ArduinoJson@^6.19.4
+    adafruit/Adafruit GFX Library@^1.11.3
+    adafruit/Adafruit ST7735 and ST7789 Library@^1.9.0
+    mikalhart/TinyGPSPlus@^1.0.3
 test_ignore = test/*
 
 [env:native]
 platform = native
 framework =
-build_flags = -std=c++17 -Wall -Wextra -g
+build_flags = -std=c++17 -Wall -Wextra -g -DLV_CONF_PATH="${PROJECT_DIR}/lv_conf.h"
 lib_deps = 
     googletest
     fabiobatsilva/ArduinoFake
+    lvgl/lvgl@^8.3.11
+    bblanchon/ArduinoJson@^6.19.4
 lib_archive = no
 test_build_src = true
