--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -13,7 +13,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-build_flags = -I src -DLV_CONF_PATH="${PROJECT_DIR}/lv_conf.h" -std=c++14 -D LV_LVGL_H_INCLUDE_SIMPLE
+build_flags = -I src -I firmware/src -DLV_CONF_PATH="${PROJECT_DIR}/lv_conf.h" -std=c++14 -D LV_LVGL_H_INCLUDE_SIMPLE
 lib_deps =
     lvgl/lvgl@^8.3.11
     bblanchon/ArduinoJson@^6.19.4
